--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@types/mercadopago": "^1.5.8",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "mercadopago": "^1.5.16",
     "morgan": "^1.10.0"
   }
 }
