--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:ts": "tsc -w",
-    "start:js": "nodemon dist/index.js",
-    "start": "concurrently npm:start:*"
+    "dev:ts": "tsc -w",
+    "dev:js": "nodemon dist/index.js",
+    "dev": "concurrently npm:dev:*",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,7 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "mercadopago": "^1.5.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "typescript": "^5.1.3"
   }
 }
